# local-ai-chat

./: .gitignore  README.md  app.py  litert_lm_server.py  pyproject.toml  requirements.txt
